# MadTyping

./: Cargo.toml  README.md
src/: app.rs  config.rs  files.rs  lib.rs  logging.rs  main.rs  ui.rs
src/platform/: mod.rs  windows.rs
