[package]
name = "mad_typing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mad_typing"
path = "src/main.rs"

[lib]
name = "mad_typing"
path = "src/lib.rs"

[dependencies]
crossterm = "0.29.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
